nginx/pod1.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: nginx
  labels:
    app: nginx
    env: dev
  annotations:
    owner: mujtaba
    purpose: demo
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
